<resources>
    <string name="app_name">Movid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_featured_title">Featured</string>
    <string name="bottom_nav_music_title">Search</string>
    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_watchlist_title">Watchlist</string>
    <string name="bottom_nav_account_title">Account</string>
    <string name="bottom_nav_search_title">Search</string>
    <string name="see_all"><u>See All</u></string>
    <string name="country_australia">Australia</string>
    <string name="sign_up">Sign up</string>
    <string name="about">Movid is an app that allows you to explore through movies and view the rating, overview, cast, reviews, trailers and other facts. You can save movies that you’ve enjoyed to your Favourites or save movies you’re keen to watch to your Watchlist.\n\nThe app is designed so that you can easily sift through the categories of Top Rated, Upcoming, Now Playing and Popular Movies. The app also allows you to Search directly for a movie or by movie category, which can be further filtered.\n\nIf you’re interested to see what’s on in other countries, you can change the country by clicking the flag in the Featured section.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="toolbar_menu">toolbar menu</string>
    <string name="movie_poster">movie poster</string>
    <string name="reload">reload</string>
    <string name="profile">profile</string>
    <string name="logo">Logo</string>
    <string name="user_profile">User Profile</string>
    <string name="oh_no">Oh no!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="please_wait">Please Wait...</string>
    <string name="login">Login</string>
    <string name="your_rating">Your Rating:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="tmdb">This product uses the TMDb API but is NOT endorsed or certified by TMDb.</string>
    <string name="about_2">This app was created for development purposes only, to showcase my skills as an android developer.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_movid">About Movid</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="share_movid">Share the Movid App</string>
    <string name="rate_movid">Rate the Movid App</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="sign_out">Sign out</string>
    <string name="movid_version">Movid v1.0.0</string>
    <string name="movid">Movid</string>
    <string name="sign_continue">Sign in to continue</string>
    <string name="browse_guest">Browse as a guest</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sort_by">Sort by</string>
    <string name="include_adult">Include Adult</string>
    <string name="released_year">Released Year</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="vote_count">Vote Count</string>
    <string name="vote_average">Vote Average</string>
    <string name="runtime_mins">Runtime (mins)</string>
    <string name="reset">reset</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="rate_movie">Rate This Movie</string>
    <string name="favorites">Favorites</string>
    <string name="watchlist">Watchlist</string>
    <string name="overview">Overview</string>
    <string name="facts">Facts</string>
    <string name="reviews">Reviews</string>
    <string name="check_reviews">Check Reviews</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="user_rating">Your Movie Rating: %1$.1f/10</string>
    <string name="no_reviews">No Reviews Available</string>
    <string name="no_rating">(Rating Not Available)</string>
    <string name="vote_summary"> %1$.1f (%2$d) </string>
</resources>