<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_featured"
        android:icon="@drawable/ic_featured"
        android:title="@string/bottom_nav_featured_title" />

    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_nav_search_title" />

    <item
        android:id="@+id/bottom_nav_favorites"
        android:icon="@drawable/ic_play"
        android:title="@string/bottom_nav_favorites_title" />
    <item
        android:id="@+id/bottom_nav_watchList"
        android:icon="@drawable/ic_wish"
        android:title="@string/bottom_nav_watchlist_title" />
    <item
        android:id="@+id/bottom_nav_account"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/bottom_nav_account_title" />

</menu>